--- a/WebAdvert.Web/Views/Account/Login.cshtml
+++ b/WebAdvert.Web/Views/Account/Login.cshtml
@@ -26,6 +26,15 @@
                     <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
                 </label>
             </div>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-12 text-right">
+                    <a asp-action="ForgetPassword" asp-controller="Account">Forget Password</a>
+                </div>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
