--- a/WebAdvert.Web/Views/Shared/_Layout.cshtml
+++ b/WebAdvert.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-action="Login" asp-controller="Account">Login</a><br />
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-action="SignUp" asp-controller="Account">Sign Up</a><br />
+                        </li>
                     </ul>
                 </div>
             </div>
