--- a/WebAdvert.Web/Views/Account/Login.cshtml
+++ b/WebAdvert.Web/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
 
             <div class="row">
                 <div class="col-12 text-right">
-                    <a asp-action="ForgetPassword" asp-controller="Account">Forget Password</a>
+                    <a asp-action="ForgotPassword" asp-controller="Account">Forgot Password</a>
                 </div>
             </div>
 
